@startuml
interface IDisplayCleaningJobOptionView {
    +  <<event>> Add : EventHandler? 
    +  <<event>> Edit : EventHandler? 
    +  <<event>> ArchiveToggled : EventHandler? 
    +  <<event>> ShowArchivedChanged : EventHandler? 
    +  <<event>> Search : EventHandler? 
    +  <<event>> SelectionChanged : EventHandler? 
    +  <<event>> SortRequested : EventHandler<SortRequestEventArgs>? 
    + SearchText : string <<get>> <<set>>
    + DataGridText : string <<set>>
    + ShowArchivedItems : bool <<get>>
    + SelectedItemArchived : bool <<set>> <<get>>
    + DisableAll() : void
    + EnableAll() : void
}
class "IDisplayView`1"<T> {
}
"IDisplayView`1" "<DisplayCleaningJobOptionModel>" <|-- IDisplayCleaningJobOptionView
IDisplayCleaningJobOptionView --> "SelectedItem" DisplayCleaningJobOptionModel
@enduml
